app/assets/stylesheets/main.scss
@import "fonts";
@import "partial/defines";
@import "partial/vmenu";
@import "partial/vmenu_admin";
@import "partial/header";
@import "partial/exam";
@import "partial/login";
@import "partial/library";
@import "partial/question-editor";
@import "partial/question-listing";
@import "partial/student_exam";
@import "partial/dialog";
@import "partial/room";
@import "partial/dashboard";
@import "partial/form-validation";
@import "partial/print";
@import "partial/datetimepicker";
@import "partial/feedback";
@import "partial/mainview";
@import "partial/printout";


html {
  font-family: $sitnet-family-helvetica;
}

body {
  background-color: $sitnet-background;
  font-family: $sitnet-family-helvetica;
}

h1, h2, h3, h4, h5, h6 {
  font-family: $sitnet-family-helvetica;
}
p {
  font-family: $sitnet-family-helvetica;
}

.vmenu-on {
  width: auto;
  margin-left: 17.025em;
  overflow-x: hidden;

  @media (max-width: $sitnet-mobile) {
    margin-left: 0;
  }

  @media print {
    overflow-x: visible;
  }
}

.vmenu-on-admin {
  width: auto;
  margin-left: 230px;
  overflow-x: hidden;

  @media (max-width: $sitnet-mobile) {
    margin-left: 0;
  }


}

.vmenu-off {
  width: auto;
  margin-left: 50px;
}

.generic-header {
  padding-left: 30px;
  border-bottom: solid 1px $sitnet-common-light;
}

label {
  .text-info {
    margin-left: 3em;

  }
}

.info-box {
  padding: 1em;
  margin-bottom: 10px !important;
  background-color: #216a9b;
  color: white;
  display: inline-block;
  div {
    clear: none;
    float: left;
  }
  ul {
    margin: 0;
    li {
      padding: 0;
    }
  }
  .text-info {
    color: white;
    font-size: 30px;
    margin-top: 5px;
  }
  .content-wrapper {
    width: 93%;
    margin-left: 1.5em;
  }
  .label-primary {
    float: left;
    padding: 0.7em;
    font-size: 12px;
    background-color: white;
    color: #216a9b;
  }
}

.question-editor-modal .modal-dialog {
  width: 80%;
}

.student-enroll-title {
  font-family: $sitnet-family-helvetica;
  font-size: 2em;
  color: #2c2c2c;
  border-bottom: 2px solid #3CA34F;
  width: 100%;
  padding-bottom: 7px;

}
.student-enroll-title-wrap {
  margin-left: 1.4em;
  display: inline-block;

  &.waitingroom {
    padding-top: 45px;
    margin-left: 2.4em;
  }

  @media (max-width: $sitnet-mobile) {
    margin-left: 0;
  }
}
.student-enroll-dialog-wrap {
  display: inline-block;
}

.student-enroll-dialog-subtitle {
  font-family: $sitnet-family-helvetica;
  font-size: 14px;
  padding-top: 30px;
  padding-bottom: 20px;
  display: inline-block;
  max-width: 100%;
  margin-bottom: 0px;
  font-weight: normal;
}

.student-message-dialog-footer {
  padding-top:17px;
  padding-bottom:45px;
}

.student-message-dialog-button-save {
  float:right;

  button {
    font-size: 16px;
    font-family: $sitnet-family-helvetica;
    background-color: #3CA34F;
    border: 1px solid #358F45;
    width: 150px;
    padding-top: 11px;
    padding-bottom: 11px;
    margin-left: 10px;

    &.nowdt {
      width: inherit;
    }

  }

  button:hover, button:active, button:focus, button:active:focus {
    background-color: #358F45;
    border: 1px solid #358F45;
  }

  a {
    font-size: 16px;
    font-family: $sitnet-family-helvetica;
    background-color: #3CA34F;
    border: 1px solid #358F45;
    width: 150px;
    margin-left: 10px;
    line-height: 1.5;
    border-radius: 3px;
    padding: 14px;
    padding-left: 20px;
    padding-right: 20px;
    color:white;

    &.nowdt {
      width: inherit;
    }

  }

  a:hover, button:active, button:focus, button:active:focus {
    background-color: #358F45;
    border: 1px solid #358F45;
    text-decoration: none;
  }

}

.student-message-dialog-button-cancel {
  float:right;

  button {
    font-size: 16px;
    font-family: $sitnet-family-helvetica;
    background-color: #808080;
    border: 1px solid #6B6B6B;
    width: 150px;
    padding-top: 11px;
    padding-bottom: 11px;

  }

  button:hover, button:active, button:focus, button:active:focus {
    background-color: #6B6B6B;
    border: 1px solid #6B6B6B;
  }


}
.student-message-dialog-textarea {
  border-radius: 4px;
  width: 100%;
  resize: vertical;
  padding-top: 10px;
  padding-left: 15px;
}

.student-details-title-wrap {
  margin-left: 2.5em;
  display: inline-block;
  margin-bottom: 30px;

  img {
    display: inline-block;
    float: left;
    padding-top: 10px;

    &.nopad {
      padding-top: 0px;
    }
  }

  &.padtop {
    padding-top: 45px;
  }

  &.noleft {
    margin-left: 0px;
  }

  &.padleft {
    margin-left: 3.7em;
  }

  &.subtitle { margin-bottom: 0px; }

  @media (max-width: $sitnet-mobile) {
    margin-left: 0em;
  }

}

.student-exam-details-title {
  font-family: $sitnet-family-helvetica;
  font-size: 2em;
  color: #2c2c2c;
  border-bottom: 2px solid #3CA34F;
  padding-bottom: 7px;
  margin-left: 50px;

  &.subtitle { margin-left: 30px; margin-bottom: 20px; }
  &.nopad { margin-left: 10px; }
  &.nomar { margin-left: 0px; }

}

.student-exam-search-title {
  font-family: $sitnet-family-helvetica;
  font-size: 2em;
  color: #2c2c2c;
  border-bottom: 2px solid #3CA34F;
  padding-bottom: 7px;

  &.subtitle { margin-left: 30px; margin-bottom: 20px; }

}

.calendar-phase-title {
  font-family: $sitnet-family-helvetica;
  font-size: 22px;
  color: #2C2C2C;
}

.calendar-phase-icon {
  display: inline-block;
  float: right;
}

.calendar-titles {
  padding-top: 10px;
}

.calendar-course-title {
  color:#2C2C2C;
  font-family: $sitnet-family-helvetica;
  font-size:16px;
  font-weight: bold;
}

.calendar-course-code {
  color:#555555;
  font-family: $sitnet-family-helvetica;
  font-size:13px;
}

.calendar-accessibility-link {

  a {
    color: #266B99;
    font-family: $sitnet-family-helvetica;
    font-weight: bold;
  }
}

.calendar-accs-title {
  font-weight: 500;
  font-family: $sitnet-family-helvetica;
  padding-bottom: 10px;
  color: #2C2C2C;

  &.subi {
    padding-top:10px;
  }

}

.calendar-accs-checkboxes {
  display: inline-block;
  padding-right:10px;
}

.calendar-button-save {
  display: inline-block;
  vertical-align: top;
  width: 22%;
  float: right;
  margin-right: 30px;
  cursor: not-allowed;

  a {
    font-size: 16px;
    font-family: $sitnet-family-helvetica;
    background-color: #D8D8D8;
    border: 1px solid #979797;
    width: 100%;
    margin-left: 10px;
    line-height: 1.5;
    border-radius: 3px;
    color: white;
    text-align: center;
    display: block;
    padding-top: 10px;
    padding-bottom: 10px;

    &.cancel {
      cursor: pointer;
      background-color: #7F7F7F;
      border: 1px solid #6B6B6B;

    }
  }

  a:hover, button:active, button:focus, button:active:focus {
    background-color: #D8D8D8;
    border: 1px solid #979797;
    &.cancel {
      cursor: pointer;
      background-color: #6B6B6B;
      border: 1px solid #6B6B6B;
    }
    text-decoration: none;
  }
}

.calendar-button-save-activated {

    cursor: pointer;

    a {
      font-size: 16px;
      font-family: $sitnet-family-helvetica;
      background-color: #3CA34F;
      border: 1px solid #358F45;
      width: 100%;
      margin-left: 10px;
      line-height: 1.5;
      border-radius: 3px;
      color: white;
      text-align: center;
      display: block;
      padding-top: 10px;
      padding-bottom: 10px;
    }

    a:hover, button:active, button:focus, button:active:focus {
      background-color: #358F45;
      border: 1px solid #358F45;
      text-decoration: none;
    }


}

.calendar-room-title {
  color: #2C2C2C;
  font-size: 16px;
  font-family: $sitnet-family-helvetica;
  font-weight: bold;
  padding-top: 10px;
}

.calendar-room-info {
  color: #555555;
  font-weight: 400;
  font-family: $sitnet-family-helvetica;
  padding-top: 15px;
  font-size: 14px;
}

.calendar-room-info-title {
  width: 150px;
  float: left;
}
.calendar-room-info-content {
  margin-left:150px;
}

.calendar-no-paddings {
  padding-left: 0px;
  padding-right: 0px;
}

/* Fullcalendar overrides */

.fc-toolbar {
  border-left: solid 1px #979797;
  padding-bottom: 1em;
  border-right: solid 1px #979797;
  border-top: solid 1px #979797;
  border-radius: 4px;
  padding-top: 27px;
  margin-bottom: 0px !important;
}

.fc-left {

}

.fc-right {
  float: right !important;
  width: 163px !important;

  .fc-today-button {
    float: right;
    margin-right:10px;
  }
}

.fc-center {

  h2 {
    color: #2C2C2C;
    font-family: $sitnet-family-helvetica;
    font-size: 22px;
    margin-left: 1em !important;
    margin-right: 1em;
    padding-top: 3px;
    margin-bottom: 0px !important;
    font-weight: 300;
  }
}

.fc-prev-button {
  background: url("../../../assets/assets/images/calendar-left.png") no-repeat;
  border: 0px;
  width: 30px;
  height: 30px !important;
}

.fc-next-button {
  background: url("../../../assets/assets/images/calendar-right.png") no-repeat;
  border: 0px;
  width: 30px;
  height: 30px !important;
  margin-left: 0px !important;
}

.fc-toolbar button:focus {
   outline: none !important;
}

.fc-icon-left-single-arrow {
  display: none;
}

.fc-icon-right-single-arrow {
  display: none;
}

.fc-myCustomButton-button {
  color: #2C2C2C;
  font-family: $sitnet-family-helvetica;
  font-size: 22px !important;
  margin-left: 1em !important;
  padding-left: 0px !important;
  margin-right: 1em;
  border: none;
  background-image: none;
  background-color: #ffffff;
  box-shadow: none;
  padding-bottom: 20px !important;
  font-weight: 300;
}

.fc-today-button {
  border: 1px solid #979797;
  background-image: none;
  background-color: #ffffff;
  box-shadow: none;
  font-size: 13px;
  color: #555555;
}

.fc-day-header {
  border: 0px;
  font-family: $sitnet-family-helvetica;
  font-size: 14px;
  color: #555555;
  padding-bottom: 0px !important;
  margin-bottom: 0px;
  font-weight: normal;
  vertical-align: middle !important;
  height: 60px;
  background-color: #FAFAFA;
}

.fc-widget-header {
  background-color: #FAFAFA;
}

.fc-time-grid .fc-slats .fc-minor td {
  border-top-style: none !important;
}

.fc-title {
  font-family: $sitnet-family-helvetica;
  color: #2C2C2C !important;
  font-size: 13px !important;
}

.fc-time {
  font-family: $sitnet-family-helvetica;
  color: #2C2C2C !important;
}


/* exam_search */
.input-group-addon {

  &.search {
    padding: 0px !important;
    border: 0px !important;
    border-radius: 0px !important;
  }
}

.form-control {

  &.search {
    height:40px !important;
    width:550px !important;
  }

  &.langinsp {
    height:40px !important;
    width:350px !important;
  }

  &.login {
    width:22em !important;
  }
}

.form-group {

  &.search {
    width: 400px;
  }

}

.dropdown-menu {

  &.settings {
    left: -180% !important;
  }
}

.text-info {
  color:#2C2C2C;
  font-size: 14px;
  font-family: $sitnet-family-helvetica;
}

.waitingroom-info {
  margin-left: 2.4em;
  padding-top: 27px;
  padding-bottom: 22px;
}

.pagination {
  margin-left: 15px;
  margin-right: 25px;

  .disabled {
    display:none;
  }

  li {

    a, a:focus {
      margin-left: 10px;
      color: #555555;
      background-color: #fff;
      border: 0px;
      font-size: 16px;
      line-height: 1.3;
      width:30px;
      height:30px;
    }
    a:hover {
      color: #fff;
      background: #3CA34F;
      -moz-border-radius: 50%;
      -webkit-border-radius: 50%;
      border-radius: 50%;
      border:0px;
      width:30px;
      height:30px;

    }

  }

  .active {

    a, a:focus {
      color: #fff;
      background: #3CA34F;
      -moz-border-radius: 50%;
      -webkit-border-radius: 50%;
      border-radius: 50%;
      border:0px;
      width:30px;
      height:30px;
    }

    a:hover {
      color: #fff;
      background: #3CA34F;
      width:30px;
      height:30px;
    }


  }

}

